[package]
name = "moving-a-player"
version = "0.1.0"
edition = "2021"
description = "A top-down game about moving a player"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = { version = "0.7.0", features = ["dynamic"] }
bevy = "0.7"
bevy_prototype_lyon = "0.5.0"
dot32_intro = { git = "https://github.com/Dot32IsCool/dot32-intro-rs", rev = "10d737d"}
bevy_embedded_assets = "0.3.0"
rand = "0.8.5"
bevy-inspector-egui = "0.10.0"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[package.metadata.bundle]
name = "Tiny Tank RS"
identifier = "com.tinytank.rs"
short_description = "A top-down shooter game"
category = "Game"
